--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tMonto" />
+        app:layout_constraintTop_toBottomOf="@+id/tMonto"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/bAgregar"
@@ -64,7 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="256dp"
+        android:layout_marginBottom="244dp"
         android:onClick="onAgregar"
         android:text="Agregar"
         app:layout_constraintBottom_toBottomOf="parent"
