--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#1073dc</color>
     <color name="colorPrimaryDark">#003e6d</color>
     <color name="colorAccent">#f8f8f8</color>
+    <color name="textColorWhite">#ffffff</color>
+    <color name="textColorBlack">#000000</color>
 </resources>
