Se modifico el estilo de los botnes y los backgrounds

--- a/app/src/main/res/drawable/buttonshape.xml
+++ b/app/src/main/res/drawable/buttonshape.xml
@@ -3,7 +3,10 @@
     <corners
         android:radius="14dp"
     />
-    <stroke android:color="#4595c6" android:width="2dp"/>
+    <gradient
+        android:startColor="@android:color/transparent"
+        android:endColor="@android:color/holo_blue_light"
+        android:angle="270" />
     <padding
         android:left="0dp"
         android:top="0dp"
