--- a/app/src/main/res/drawable/buttonshape.xml
+++ b/app/src/main/res/drawable/buttonshape.xml
@@ -5,7 +5,7 @@
     />
     <gradient
         android:startColor="@android:color/transparent"
-        android:endColor="@android:color/holo_blue_light"
+        android:endColor="@color/colorPrimary"
         android:angle="270" />
     <padding
         android:left="0dp"
