--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#1073dc</color>
     <color name="colorPrimaryDark">#003e6d</color>
-    <color name="colorAccent">#2c4b7a</color>
+    <color name="colorAccent">#03183a</color>
     <color name="textColorWhite">#ffffff</color>
     <color name="textColorBlack">#000000</color>
 </resources>
