--- a/app/src/main/res/layout/activity_add_data.xml
+++ b/app/src/main/res/layout/activity_add_data.xml
@@ -49,16 +49,13 @@
         android:layout_width="213dp"
         android:layout_height="38dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="40dp"
         android:entries="@array/categories"
         app:layout_constraintBottom_toTopOf="@+id/bAgregar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tMonto"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/bAgregar"
@@ -67,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="244dp"
+        android:layout_marginBottom="76dp"
         android:background="@drawable/buttonshape"
         android:foregroundTint="#00000000"
         android:onClick="onAgregar"
@@ -75,7 +72,7 @@
         android:textColor="@color/textColorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent" />
 
     <RadioGroup
@@ -116,5 +113,18 @@
         app:srcCompat="@drawable/back"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp" />
+
+    <EditText
+        android:id="@+id/tDescripcion"
+        android:layout_width="212dp"
+        android:layout_height="112dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:ems="10"
+        android:hint="Descripcion"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/sCategorias"
+        app:layout_constraintTop_toBottomOf="@+id/tMonto"
+        tools:layout_editor_absoluteX="103dp" />
 
 </android.support.constraint.ConstraintLayout>
