--- a/app/src/main/res/layout/activity_add_data.xml
+++ b/app/src/main/res/layout/activity_add_data.xml
@@ -118,13 +118,16 @@
         android:id="@+id/tDescripcion"
         android:layout_width="212dp"
         android:layout_height="112dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="Descripcion"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/sCategorias"
-        app:layout_constraintTop_toBottomOf="@+id/tMonto"
-        tools:layout_editor_absoluteX="103dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tMonto" />
 
 </android.support.constraint.ConstraintLayout>
